--- a/app/src/main/res/layout/activity_availability.xml
+++ b/app/src/main/res/layout/activity_availability.xml
@@ -29,12 +29,12 @@
         android:layout_marginBottom="8dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        app:compactCalendarBackgroundColor="#000000"
-        app:compactCalendarCurrentDayBackgroundColor="@color/colorPrimary"
-        app:compactCalendarCurrentSelectedDayBackgroundColor="@color/colorFAB"
+        app:compactCalendarBackgroundColor="#FFFF"
+        app:compactCalendarCurrentDayBackgroundColor="@color/colorFAB"
+        app:compactCalendarCurrentSelectedDayBackgroundColor="#D3D3D3"
         app:compactCalendarMultiEventIndicatorColor="#fff"
         app:compactCalendarTargetHeight="250dp"
-        app:compactCalendarTextColor="#fff"
+        app:compactCalendarTextColor="#000"
         app:compactCalendarTextSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
