--- a/app/src/main/res/layout/activity_book_service.xml
+++ b/app/src/main/res/layout/activity_book_service.xml
@@ -7,8 +7,9 @@
     tools:context=".BookService">
 
     <android.support.design.widget.AppBarLayout
-        android:layout_width="371dp"
-        android:layout_height="125dp"
+        android:id="@+id/appBarLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
@@ -26,5 +27,17 @@
 
 
     </android.support.design.widget.AppBarLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/avail_rec"
+        android:layout_width="0dp"
+        android:layout_height="386dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:scrollbars="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
 
 </android.support.constraint.ConstraintLayout>
