--- a/app/src/main/res/layout/activity_book_service.xml
+++ b/app/src/main/res/layout/activity_book_service.xml
@@ -70,7 +70,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:background="#ff6666 "
                         android:fontFamily="@font/font"
                         android:padding="12dp"
                         android:text="8 AM " />
@@ -107,7 +106,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:background="#ff6666 "
                         android:fontFamily="@font/font"
                         android:padding="12dp"
                         android:text="9 AM " />
@@ -144,7 +142,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:background="#ff6666 "
                         android:fontFamily="@font/font"
                         android:padding="12dp"
                         android:text="10 AM " />
@@ -181,7 +178,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:background="#ff6666 "
                         android:fontFamily="@font/font"
                         android:padding="12dp"
                         android:text="11 AM " />
@@ -218,7 +214,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:background="#ff6666 "
                         android:fontFamily="@font/font"
                         android:padding="12dp"
                         android:text="12 AM " />
@@ -255,10 +250,9 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:background="#ff6666 "
+                        android:fontFamily="@font/font"
                         android:padding="12dp"
-                        android:text="1 PM"
-                        android:fontFamily="@font/font" />
+                        android:text="1 PM" />
 
                     <TextView
                         android:id="@+id/textView1pm"
@@ -292,7 +286,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:background="#ff6666 "
                         android:fontFamily="@font/font"
                         android:padding="12dp"
                         android:text="2 PM" />
@@ -329,7 +322,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:background="#ff6666 "
                         android:fontFamily="@font/font"
                         android:padding="12dp"
                         android:text="3 PM" />
@@ -366,7 +358,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:background="#ff6666 "
                         android:fontFamily="@font/font"
                         android:padding="12dp"
                         android:text="4 PM " />
@@ -403,7 +394,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:background="#ff6666 "
                         android:fontFamily="@font/font"
                         android:padding="12dp"
                         android:text="5 PM " />
@@ -440,7 +430,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:background="#ff6666 "
                         android:fontFamily="@font/font"
                         android:padding="12dp"
                         android:text="6 PM" />
@@ -477,7 +466,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:background="#ff6666 "
                         android:fontFamily="@font/font"
                         android:padding="12dp"
                         android:text="7 PM" />
@@ -514,7 +502,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:background="#ff6666 "
                         android:fontFamily="@font/font"
                         android:padding="12dp"
                         android:text="8 PM" />
