--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -9,4 +9,10 @@
         android:icon="@drawable/baseline_search_black_48"
         app:showAsAction="ifRoom|collapseActionView"
         app:actionViewClass="android.support.v7.widget.SearchView"/>
+
+    <item
+        android:id="@+id/action_filter"
+        android:icon="@drawable/baseline_filter_list_black_48"
+        android:title="Filter"
+        app:showAsAction="ifRoom"/>
 </menu>
