--- a/app/src/main/res/layout/list_service_providers.xml
+++ b/app/src/main/res/layout/list_service_providers.xml
@@ -48,13 +48,13 @@
                 android:id="@+id/description"
                 android:layout_width="145dp"
                 android:layout_height="29dp"
-                android:layout_marginStart="6dp"
+                android:layout_marginStart="128dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="16dp"
                 android:fontFamily="@font/font"
                 android:text="Placeholder"
                 card_view:layout_constraintEnd_toEndOf="parent"
-                card_view:layout_constraintHorizontal_bias="0.903"
+                card_view:layout_constraintHorizontal_bias="1.0"
                 card_view:layout_constraintStart_toEndOf="@+id/textView6"
                 card_view:layout_constraintTop_toBottomOf="@+id/service" />
 
@@ -73,8 +73,9 @@
 
             <TextView
                 android:id="@+id/rating"
-                android:layout_width="145dp"
-                android:layout_height="29dp"
+                android:layout_width="50dp"
+                android:layout_height="25dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
@@ -82,6 +83,8 @@
                 android:text="TextView"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintEnd_toEndOf="parent"
+                card_view:layout_constraintHorizontal_bias="0.333"
+                card_view:layout_constraintStart_toEndOf="@+id/textView8"
                 card_view:layout_constraintTop_toBottomOf="@+id/description" />
 
             <TextView
@@ -97,6 +100,21 @@
                 card_view:layout_constraintHorizontal_bias="1.0"
                 card_view:layout_constraintStart_toEndOf="@+id/textview_service"
                 card_view:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="12dp"
+                app:srcCompat="@android:drawable/btn_star_big_on"
+                card_view:layout_constraintBottom_toBottomOf="parent"
+                card_view:layout_constraintEnd_toEndOf="parent"
+                card_view:layout_constraintHorizontal_bias="0.0"
+                card_view:layout_constraintStart_toEndOf="@+id/rating"
+                card_view:layout_constraintTop_toBottomOf="@+id/description" />
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
